--- a/Task_1/TicketReSail/TicketResail.Core/TicketReSail.Core.csproj
+++ b/Task_1/TicketReSail/TicketResail.Core/TicketReSail.Core.csproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MailKit" Version="2.9.0" />
+    <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.2.7" />
     <PackageReference Include="Microsoft.Extensions.Localization" Version="3.1.9" />
   </ItemGroup>
 
