--- a/Task_1/TicketReSail/TicketReSail/appsettings.json
+++ b/Task_1/TicketReSail/TicketReSail/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "TicketConnection": "Server=(localdb)\\mssqllocaldb;Database=ResaleDB;Trusted_Connection=True;"
+    "TicketConnection": "Server=(localdb)\\mssqllocaldb;Database=ResaleDB_Ruslan_Mikhno;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
